--- a/src/SendMessage.module.scss
+++ b/src/SendMessage.module.scss
@@ -1,6 +1,10 @@
 .root {
   display: flex;
 
+  button[type=submit] {
+    margin-right: 5px;
+  }
+
   input[type=text] {
     flex: 1;
     margin: 0 5px;
