--- a/src/ChatPage.module.scss
+++ b/src/ChatPage.module.scss
@@ -12,8 +12,19 @@
   padding: 10px;
 }
 
-.messages {
+.messagesContainer {
   flex: 1;
   padding: 10px;
   overflow: scroll;
+}
+
+.messages {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  min-height: 100%;
+}
+
+.me {
+  color: steelblue;
 }
