Minor style improvements to flash message in landing page

--- a/src/LandingPage.module.scss
+++ b/src/LandingPage.module.scss
@@ -12,7 +12,10 @@
 }
 
 .errorMessage {
-  background-color: mediumturquoise;
+  background-color: steelblue;
   padding: 10px;
   margin-bottom: 10px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
 }
